# hoover-chess-utils

./: CMakeLists.txt  CREDITS.txt  README.md  build-config.dox  build-docs.sh  build-github-pages.sh  build-release.sh  build-run-coverage.sh  build-run-tests.sh  cpufeatures-aarch64.cmake  cpufeatures-x86.cmake  cpufeatures.cmake
.github/workflows/: build-and-checks-x86-64-generic.yml  build-run-test-coverage.yml
doc/: build-config.dox  hoover-compactify-tcec-pgn.dox  hoover-process-full-tcec-pgn.dox  hoover-tdb-query.dox  mainpage.dox
html/: README.md  index.html
main/code-coverage-report/: index.html
main/docs-api/: annotated.html  chessboard-table.css  chessboard-types-squareset_8h_source.html  chessboard-types_8h_source.html  chessboard_8h_source.html  classes.html  classhoover__chess__utils_1_1pgn__reader_1_1ChessBoard-members.html  classhoover__chess__utils_1_1pgn__reader_1_1ChessBoard.html  classhoover__chess__utils_1_1pgn__reader_1_1ChessBoard_1_1Move-members.html  classhoover__chess__utils_1_1pgn__reader_1_1ChessBoard_1_1Move.html  classhoover__chess__utils_1_1pgn__reader_1_1MiniString-members.html  classhoover__chess__utils_1_1pgn__reader_1_1MiniString.html  classhoover__chess__utils_1_1pgn__reader_1_1PgnError-members.html  classhoover__chess__utils_1_1pgn__reader_1_1PgnError.html  classhoover__chess__utils_1_1pgn__reader_1_1PgnError__coll__graph.map  classhoover__chess__utils_1_1pgn__reader_1_1PgnError__coll__graph.md5  classhoover__chess__utils_1_1pgn__reader_1_1PgnReader-members.html  classhoover__chess__utils_1_1pgn__reader_1_1PgnReader.html  classhoover__chess__utils_1_1pgn__reader_1_1PgnReaderActionFilter-members.html  classhoover__chess__utils_1_1pgn__reader_1_1PgnReaderActionFilter.html  classhoover__chess__utils_1_1pgn__reader_1_1PgnReaderActions-members.html  classhoover__chess__utils_1_1pgn__reader_1_1PgnReaderActions.html  classhoover__chess__utils_1_1pgn__reader_1_1SquareSet-members.html  classhoover__chess__utils_1_1pgn__reader_1_1SquareSet.html  classhoover__chess__utils_1_1pgn__reader_1_1StringUtils-members.html  classhoover__chess__utils_1_1pgn__reader_1_1StringUtils.html  dir_daea48f97659d414a704e8bd33678c4c.html  dir_e2f802b2c4f5bfd797dc30490f99f81e.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_type.html  functions_vars.html  group__PgnReaderAPI.html  group__PgnReaderImpl.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  (+25 more)
main/docs-full/: annotated.html  bitboard-attacks_8h.html  bitboard-attacks_8h__dep__incl.map  bitboard-attacks_8h__dep__incl.md5  bitboard-attacks_8h__incl.map  bitboard-attacks_8h__incl.md5  bitboard-attacks_8h_source.html  bitboard-intercepts_8h.html  bitboard-intercepts_8h__dep__incl.map  bitboard-intercepts_8h__dep__incl.md5  bitboard-intercepts_8h__incl.map  bitboard-intercepts_8h__incl.md5  bitboard-intercepts_8h_source.html  bittricks_8h.html  bittricks_8h__dep__incl.map  bittricks_8h__dep__incl.md5  bittricks_8h__incl.map  bittricks_8h__incl.md5  bittricks_8h_source.html  build-config_8dox.html  build_config.html  chessboard-movegen_8h.html  chessboard-movegen_8h__incl.map  chessboard-movegen_8h__incl.md5  chessboard-movegen_8h_source.html  chessboard-priv_8h.html  chessboard-priv_8h__dep__incl.map  chessboard-priv_8h__dep__incl.md5  chessboard-priv_8h__incl.map  chessboard-priv_8h__incl.md5  chessboard-priv_8h_source.html  chessboard-test-playmove-helper_8h.html  chessboard-test-playmove-helper_8h__incl.map  chessboard-test-playmove-helper_8h__incl.md5  chessboard-test-playmove-helper_8h_source.html  chessboard-types-squareset_8h.html  chessboard-types-squareset_8h__dep__incl.map  chessboard-types-squareset_8h__dep__incl.md5  chessboard-types-squareset_8h__incl.map  chessboard-types-squareset_8h__incl.md5  (+360 more)
pgn-reader/: CMakeLists.txt
pgn-reader/doc/: doxygen-groups.dox
pgn-reader/include/: chessboard-types-squareset.h  chessboard-types.h  chessboard.h  pgnreader-error.h  pgnreader-string-utils.h  pgnreader-types.h  pgnreader.h  position-compress-fixed.h  version.h
pgn-reader/src/: bitboard-attacks-aarch64-sve2-bitperm.cc  bitboard-attacks-aarch64-sve2-bitperm.h  bitboard-attacks-avx512f.h  bitboard-attacks-black-magic.h  bitboard-attacks-elementary.h  bitboard-attacks-pext-pdep.cc  bitboard-attacks-pext-pdep.h  bitboard-attacks-portable.cc  bitboard-attacks-portable.h  bitboard-attacks-x86-avx512f.h  bitboard-attacks-x86-bmi2.cc  bitboard-attacks-x86-bmi2.h  bitboard-attacks.cc  bitboard-attacks.h  bitboard-intercepts.cc  bitboard-intercepts.h  bitboard-tables.cc  bitboard-tables.h  bitrays.cc  bitrays.h  bittricks-table-pdep8x8.inc  bittricks-table-pext8x8.inc  bittricks.cc  bittricks.h  chessboard-bitboard.cc  chessboard-boardsetup.cc  chessboard-loadfen.cc  chessboard-movegen-all.h  chessboard-movegen-by-dest.h  chessboard-movegen.cc  chessboard-movegen.h  chessboard-printboard.cc  chessboard-priv.h  chessboard-types-squareset.cc  chessboard.cc  lookup-utils.h  pawn-lookups.cc  pawn-lookups.h  pgnparser.cc  pgnparser.h  (+24 more)
pgn-reader/test/: bitboard-attacks-test.cc  bitboard-test.cc  bittricks-test.cc  boardtest.cc  chessboard-boardsetup-test.cc  chessboard-loadfen-test.cc  chessboard-movegen-test.cc  chessboard-pinned-pieces-test.cc  chessboard-test-perft.cc  chessboard-test-playmove-helper.h  chessboard-test.cc  chessboard-types-squareset-test.cc  chessboard-types-test.cc  main.cc  parsertest-1.pgn  perft.cc  pgnparsertest.cc  pgnreader-error-recovery-test.cc  pgnreader-error-test.cc  pgnreader-string-utils-test.cc  pgnreader-test.cc  pgnreaderperftest.cc  pgnscannertest.cc  position-compress-fixed-test.cc  scannertest-1.pgn  stringbuilder-test.cc  version-test.cc
scripts/: build-functions.bash  calculate-elementary-bitboard-tables.py  check-source-preambles.py  run-ethereal-perft-suite.py
scripts/ethereal-perft-suite/: README.txt
utils/: CMakeLists.txt  compactify-tcec-pgn.cc  compressed-position.cc  compressed-position.h  memory-mapped-file.cc  memory-mapped-file.h  output-buffer.cc  output-buffer.h  process-full-tcec-pgn.cc  tdb-query.cc
(+191 files in other folders)
